Add background image styling header

--- a/index.html
+++ b/index.html
@@ -13,21 +13,76 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>BIKERS ROAD TRIP</h1>
+            <h1 id="logo">BIKERS ROAD TRIP</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="shop.html"><h2>Shop</h2></a>
                 </li>
                 <li>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html"><h2>Gallery</h2></a>
                 </li>
                 <li>
-                    <a href="shop.html">Shop</a>
+                    <a href="index.html" class="active"><h2>Home</h2></a>
                 </li>
             </ul>
         </nav>
     </header>
     
+    <section>
+        <div id="gang-image">
+            <h2>COME JOIN US</h2>
+        </div>
+
+    </section>
+    <!-- Message Section -->
+    <section>
+        <p>
+            <h3>It's now open the season of adventure!</h3>
+        </p>
+        <p class="message">
+            Come and join dozens of motor bikers in Ireland and Abroad, a lifetime
+            experience where you will make new friends and socialise with people.
+            Bring in your story and have the time you need to refresh.
+        </p>
+        <p class="message">
+            See below weekend meet up schedule of SUMMER SEASON in
+            County Cork and Kerry, starting from 25th June 2022.
+        </p>
+    </section>
+    <!-- Schedule Section -->
+    <section>
+        <!-- insert here -->
+    </section>
+    <!-- Form -->
+    <section>
+        <form>
+
+        </form>
+    </section>
+    <!-- Find Us section -->
+    <section>
+
+    </section>
+    <!-- footer -->
+    <footer>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/644e88eb26.js" crossorigin="anonymous"></script>
+    </footer>
 </body>
