add style to cover-text

--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
         </nav>
     </header>
     
-    <section>
-        <div id="gang-image">
-            <h2>COME JOIN US</h2>
+    <section id="gang-outer">
+        <div id="gang-image"></div>
+        <div id="cover-zoom">
+            <div id="cover-text">    
+                <h2>COME JOIN US</h2>
+                <h3>It's now open the season of adventure!</h3>
+            </div>
         </div>
 
     </section>
     <!-- Message Section -->
     <section>
-        <p>
-            <h3>It's now open the season of adventure!</h3>
-        </p>
         <p class="message">
-            Come and join dozens of motor bikers in Ireland and Abroad, a lifetime
-            experience where you will make new friends and socialise with people.
+            Come and join dozens of motor bikers in Ireland and Abroad. 
+            A lifetime experience where you will make new friends and socialise with people.
             Bring in your story and have the time you need to refresh.
         </p>
         <p class="message">
