Add leg boxes with locations of trips

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
 
     </section>
+    
     <!-- Message Section -->
     <section>
         <p class="message">
@@ -47,14 +48,37 @@
             A lifetime experience where you will make new friends and socialise with people.
             Bring in your story and have the time you need to refresh.
         </p>
+        <hr>
+        <hr>
         <p class="message">
             See below weekend meet up schedule of SUMMER SEASON in
             County Cork and Kerry, starting from 25th June 2022.
         </p>
     </section>
-    <!-- Schedule Section -->
+    
+    <!-- leg boxes -->
     <section>
-        <!-- insert here -->
+        <div class="leg-box">
+            <h3><i class="fa-duotone fa-circle-arrow-right"></i> First Leg</h3>
+            <p> <i class="fa-light fa-location-dot"></i> Start Point: Kinsale Marina</p>
+            <p>   End Point: Mizen Head</p>
+            <hr>
+            <p>115 km</p>
+        </div>
+        <div class="leg-box">
+            <h3><i class="fa-duotone fa-circle-arrow-right"></i> Second Leg</h3>
+            <p> <i class="fa-light fa-location-dot"></i>Start Point: Glengarriff</p>
+            <p>End Point: Killarney</p>
+            <hr>
+            <p>90 km</p>
+        </div>
+        <div class="leg-box">
+            <h3><i class="fa-duotone fa-circle-arrow-right"></i> Third Leg</h3>
+            <p>  <i class="fa-light fa-location-dot"></i> Start Point: Tralee</p>
+            <p>End Point: Ennis</p>
+            <hr>
+            <p>150 km</p>
+        </div>
     </section>
     <!-- Form -->
     <section>
