--- a/gallery.html
+++ b/gallery.html
@@ -29,3 +29,36 @@
             </ul>
         </nav>
     </header>
+
+    <section id="photos">
+        <img src="assets/images/bike-g13.jpg" alt="Girl Smiling">
+        <img src="assets/images/bike-g12.jpg" alt="Serious man on a bike">
+        <img src="assets/images/bike-g8.jpg" alt="Old man with helmet">
+        <img src="assets/images/bike-g11.jpg" alt="Couple with USA helmets">
+        <img src="assets/images/bike-g6.jpg" alt="Old man without helmet">
+        <img src="assets/images/bike-g5.jpg" alt="Napoli jacket man">
+        <img src="assets/images/bike-g9.jpg" alt="Funny man">
+        <img src="assets/images/bike-g10.jpg" alt="Two man on a fat-boy Harley">
+        <img src="assets/images/bike-g7.jpg" alt="Man with a mask">
+        <img src="assets/images/bike-g2.jpg" alt="A man among other bikes">
+    </section>
+
+    <footer>
+        <ul class="social-media">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/644e88eb26.js" crossorigin="anonymous"></script>
+    </footer>
