Add shop page and contact information

--- a/gallery.html
+++ b/gallery.html
@@ -44,6 +44,13 @@
     </section>
 
     <footer>
+        <h4>info@info.xom</h4>
+        <h4>www.example.exa</h4>
+        <br>
+        <h4>Patrick Street</h4>
+        <h4>Cork City</h4>
+        
+
         <ul class="social-media">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
@@ -62,3 +69,6 @@
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/644e88eb26.js" crossorigin="anonymous"></script>
     </footer>
+
+    </body>
+    </html>
