--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Message Section -->
     <section>
         <p class="message">
-            Come and join dozens of motor bikers in Ireland and Abroad. 
+            If you are a motor biker, come and join dozens of them in Ireland and Abroad. 
             A lifetime experience where you will make new friends and socialise with people.
             Bring in your story and have the time you need to refresh.
         </p>
