--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Bikers Road Trip</title>
 </head>
 
-<body>
+<body class="body">
     <header>
         <a href="index.html">
             <h1 id="logo">BIKERS ROAD TRIP</h1>
@@ -59,22 +59,22 @@
     <!-- leg boxes -->
     <section>
         <div class="leg-box">
-            <h3><i class="fa-duotone fa-circle-arrow-right"></i> First Leg</h3>
-            <p> <i class="fa-light fa-location-dot"></i> Start Point: Kinsale Marina</p>
+            <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> First Leg</h3>
+            <p> <i class="fa fa-light fa-location-dot"></i> Start Point: Kinsale Marina</p>
             <p>   End Point: Mizen Head</p>
             <hr>
             <p>115 km</p>
         </div>
         <div class="leg-box">
-            <h3><i class="fa-duotone fa-circle-arrow-right"></i> Second Leg</h3>
-            <p> <i class="fa-light fa-location-dot"></i>Start Point: Glengarriff</p>
+            <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> Second Leg</h3>
+            <p> <i class="fa fa-light fa-location-dot"></i>Start Point: Glengarriff</p>
             <p>End Point: Killarney</p>
             <hr>
             <p>90 km</p>
         </div>
         <div class="leg-box">
-            <h3><i class="fa-duotone fa-circle-arrow-right"></i> Third Leg</h3>
-            <p>  <i class="fa-light fa-location-dot"></i> Start Point: Tralee</p>
+            <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> Third Leg</h3>
+            <p>  <i class="fa fa-light fa-location-dot"></i> Start Point: Tralee</p>
             <p>End Point: Ennis</p>
             <hr>
             <p>150 km</p>
@@ -117,9 +117,8 @@
     
     <!-- Find Us section -->
     <section>
-        <div class="maps-box">
-            <iframe src="https://www.google.co.uk/maps/place/St+Patrick's+St,+Centre,+Cork/@51.8984206,-8.474596,17z/data=!3m1!4b1!4m5!3m4!1s0x484490104a24174d:0xb8772718995a199f!8m2!3d51.8984173!4d-8.4724073" width="500" height="400" style="border:0;" title="Find us on Google Maps">
-            </iframe>
+        <div>
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.9477677301547!2d-8.4724073!3d51.8984173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484490104a24174d%3A0xb8772718995a199f!2sSt%20Patrick&#39;s%20St%2C%20Centre%2C%20Cork!5e0!3m2!1sen!2sie!4v1653152913037!5m2!1sen!2sie" title="Find us Map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
     
