--- a/shop.html
+++ b/shop.html
@@ -10,7 +10,7 @@
     <title>Bikers Road Trip</title>
 </head>
 
-<body>
+<body class="body">
     <header>
         <a href="index.html">
             <h1 id="logo">BIKERS ROAD TRIP</h1>
