Add find us text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Message Section -->
     <section>
         <p class="message">
-            If you are a motor biker, come and join dozens of them in Ireland and Abroad. 
+            If you are a motor biker, come and join dozens of them in Ireland. 
             A lifetime experience where you will make new friends and socialise with people.
             Bring in your story and have the time you need to refresh.
         </p>
@@ -60,21 +60,21 @@
     <section>
         <div class="leg-box">
             <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> First Leg</h3>
-            <p> <i class="fa fa-light fa-location-dot"></i> Start Point: Kinsale Marina</p>
+            <p><i class="fa fa-light fa-location-dot"></i> Start Point: Kinsale Marina</p>
             <p>   End Point: Mizen Head</p>
             <hr>
             <p>115 km</p>
         </div>
         <div class="leg-box">
             <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> Second Leg</h3>
-            <p> <i class="fa fa-light fa-location-dot"></i>Start Point: Glengarriff</p>
+            <p><i class="fa fa-light fa-location-dot"></i> Start Point: Glengarriff</p>
             <p>End Point: Killarney</p>
             <hr>
             <p>90 km</p>
         </div>
         <div class="leg-box">
             <h3><i class="fa fa-duotone fa-circle-arrow-right"></i> Third Leg</h3>
-            <p>  <i class="fa fa-light fa-location-dot"></i> Start Point: Tralee</p>
+            <p><i class="fa fa-light fa-location-dot"></i> Start Point: Tralee</p>
             <p>End Point: Ennis</p>
             <hr>
             <p>150 km</p>
@@ -116,7 +116,8 @@
     
     
     <!-- Find Us section -->
-    <section>
+    <section id="style-map">
+        <h2>FIND US</h2>
         <div>
            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.9477677301547!2d-8.4724073!3d51.8984173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484490104a24174d%3A0xb8772718995a199f!2sSt%20Patrick&#39;s%20St%2C%20Centre%2C%20Cork!5e0!3m2!1sen!2sie!4v1653152913037!5m2!1sen!2sie" title="Find us Map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
