Add style for screens up to 850px for home page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <label for="2nd Leg" class="pad-leg">2nd Leg</label>
                     <input type="checkbox" value="2nd Leg">
 
-                    <label for="3rd Leg">3rd Leg</label>
+                    <label for="3rd Leg" class="pad-leg">3rd Leg</label>
                     <input type="checkbox" value="3rd Leg">
                     <hr>
                     
@@ -132,7 +132,7 @@
     <!-- Find Us section -->
     <section id="style-map">
         <h2>FIND US</h2>
-        <div>
+        <div id="map-box">
            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2461.9477677301547!2d-8.4724073!3d51.8984173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x484490104a24174d%3A0xb8772718995a199f!2sSt%20Patrick&#39;s%20St%2C%20Centre%2C%20Cork!5e0!3m2!1sen!2sie!4v1653152913037!5m2!1sen!2sie" title="Find us Map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
