Fixing form errors

--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@
         </nav>
     </header>
 
+    <!-- Photo Gallery -->
     <section id="photos">
         <img src="assets/images/bike-g13.jpg" alt="Girl Smiling">
         <img src="assets/images/bike-g12.jpg" alt="Serious man on a bike">
@@ -42,6 +43,8 @@
         <img src="assets/images/bike-g7.jpg" alt="Man with a mask">
         <img src="assets/images/bike-g2.jpg" alt="A man among other bikes">
     </section>
+
+    <!-- Footer -->
 
     <footer>
         <h4>info@info.xom</h4>
