--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
                     <p>Please select which legs you will be participating:</p>
                     <p> </p>
 
-                    <label for="1st Leg">1st Leg</label>
-                    <input type="checkbox" value="1st Leg">
+                    <label for="1st_Leg">1st Leg</label>
+                    <input id="1st_Leg" type="checkbox" value="1st_Leg">
 
 
-                    <label for="2nd Leg" class="pad-leg">2nd Leg</label>
-                    <input type="checkbox" value="2nd Leg">
+                    <label for="2nd_Leg" class="pad_leg">2nd Leg</label>
+                    <input id="2nd_Leg" type="checkbox" value="2nd_Leg">
 
-                    <label for="3rd Leg" class="pad-leg">3rd Leg</label>
-                    <input type="checkbox" value="3rd Leg">
+                    <label for="3rd_Leg" class="pad_leg">3rd Leg</label>
+                    <input id="3rd_Leg" type="checkbox" value="3rd_Leg">
                     <hr>
                     
                     <input class="join-button" type="submit" value="Join!">
